# latino-sqlite3

./: .gitignore  .gitmodules  CMakeLists.txt  Nota.txt  Readme.md  Sconstruct.py  instalar.sh
ejemplos/: ejemplo1.lat  ejemplo_fk.lat  ejemplo_pk.lat
sqlite/: Sconscript
src/: latino-sqlite.c
